# Pokopom

./: CMakeLists.txt  Makefile  Pokopom.rc  Pokopom.sln  Pokopom_vs11.sln  README  README.md  makefile
Pokopom/: Chankast.cpp  Chankast.h  Codes_IDs.h  Config.cpp  Config.h  ConfigDialog.cpp  ConfigDialog.h  ConsoleOutput.cpp  ConsoleOutput.h  Controller.cpp  Controller.h  Controller2.cpp  ControllerGuitar.cpp  ControllerMtap.cpp  DebugStuff.cpp  DebugStuff.h  Exports.def  FileIO.cpp  FileIO.h  General.h  Input.h  Input_Backend.h  Input_Linux.cpp  Input_Shared.cpp  Input_Shared.h  Input_XInput.cpp  Main.cpp  Main.h  PSemuPro_Interface.h  PlayStation.cpp  PlayStation.h  Pokopom.rc  Pokopom.vcxproj  Pokopom.vcxproj.filters  Pokopom_vs11.vcxproj  Pokopom_vs11.vcxproj.filters  Readme.txt  Settings.cpp  Settings.h  SharedStuff.cpp  (+32 more)
SCP/: SCPExtensions.cpp  SCPExtensions.h
